--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -61,6 +61,7 @@
     "@metamask/auto-changelog": "^2.5.0",
     "@metamask/snap-types": "^0.14.0",
     "@metamask/template-snap": "^0.7.0",
+    "@peculiar/webcrypto": "^1.3.3",
     "@types/concat-stream": "^1.6.1",
     "@types/gunzip-maybe": "^1.4.0",
     "@types/jest": "^26.0.23",
